# pygafro

./: .bandit  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  REUSE.toml  colcon.pkg  package.xml  pyproject.toml
.github/workflows/: build.yaml  publish.yaml  publish_assets.yaml  publish_source.yaml  publish_wheels.yaml
.reuse/: dep5
assets/: MANIFEST.in  README.md  pyproject.toml
cmake/: dependencies.cmake
cmake/patches/: eigen3.patch  gafro.patch  gafro_robot_descriptions.patch  pybind11.patch  yaml-cpp.patch
dependencies/: CMakeLists.txt
scripts/: CMakeLists.txt  generate_caleytable.py  generate_hands.py  generate_manipulators.py  generate_motor_apply_methods.py  generate_multivector_multiplications.py  generate_multivectors.py  generate_quadrupeds.py  generate_rotor_apply_methods.py  generate_similarity_apply_methods.py  generate_singlemanipulatordualtargets.py  generate_singlemanipulatormotorcosts.py  generate_singlemanipulatortargets.py  helpers.py
scripts/templates/: geometricproductcayleytable.py  hands.h  hands.hpp  innerproductcayleytable.py  manipulators.h  manipulators.h.license  manipulators.hpp  manipulators.hpp.license  multivectors.h  multivectors.hpp  outerproductcayleytable.py  quadrupeds.h  quadrupeds.hpp  quadrupeds.hpp.license  singlemanipulatordualtargets.h  singlemanipulatordualtargets.hpp  singlemanipulatordualtargets_functions.hpp  singlemanipulatormotorcosts.h  singlemanipulatormotorcosts.h.license  singlemanipulatormotorcosts.hpp  singlemanipulatormotorcosts_functions.hpp  singlemanipulatortargets.h  singlemanipulatortargets.hpp  singlemanipulatortargets_functions.hpp
src/: CMakeLists.txt  __init__.py  manipulator.py  multivector.py  singlemanipulatordualtarget.py  singlemanipulatormotorcost.py  singlemanipulatortarget.py  utils.py
src/cpp/: algebra.cpp  bindings.cpp  physics.cpp  physics_types.h  robots.cpp  utils.cpp  utils.h
src/cpp/algebra/: motor.cpp  motor_utils.hpp  multivector_utils.hpp  products_utils.hpp  rotor.cpp  rotor_utils.hpp  similarity_transformation.cpp  similarity_transformation_utils.hpp  types.h
src/cpp/robots/: AnymalC.hpp  FixedJoint.hpp  FrankaEmikaRobot.hpp  Hand.hpp  Joint.hpp  KinematicChain.hpp  KukaIIWA14.hpp  KukaIIWA7.hpp  LeapHand.hpp  Link.hpp  Manipulator.hpp  Planar3DoF.hpp  PrismaticJoint.hpp  Quadruped.hpp  RevoluteJoint.hpp  System.hpp  UFactoryLite6.hpp  UR5.hpp  types.h  utils.hpp
tests/: CMakeLists.txt  helpers.py  main.py
tests/algebra/: __init__.py  test_circle.py  test_directionvector.py  test_line.py  test_motor.py  test_motorgenerator.py  test_multivector.py  test_plane.py  test_point.py  test_pointpair.py  test_rotor.py  test_rotorgenerator.py  test_sphere.py  test_translator.py  test_translatorgenerator.py  test_vector.py
tests/optimization/: test_singlemanipulatordualtarget.py  test_singlemanipulatormotorcost.py  test_singlemanipulatortarget.py
tests/physics/: __init__.py  test_inertia.py  test_twist.py  test_wrench.py
tests/robots/: test_anymalc.py  test_atlas.py  test_fixedjoint.py  test_frankaemikarobot.py  test_hand.py  test_kinematicchain.py  test_kukaIIW14.py  test_kukaIIWA7.py  test_leaphand.py  test_link.py  test_manipulator.py  test_planar3dof.py  test_prismaticjoint.py  test_quadruped.py  test_revolutejoint.py  test_system.py  test_ufactorylite6.py  test_unitreeg1.py  test_ur5.py
