<!--
SPDX-FileCopyrightText: 2024 Idiap Research Institute <contact@idiap.ch>

SPDX-FileContributor: Jeremy Maceiras  <jeremy.maceiras@idiap.ch>

SPDX-License-Identifier: MPL-2.0
-->

<package format="2">
  <name>pygafro</name>
  <version>1.3.1</version>
  <description>pygafro package</description>
  <maintainer email="philip.abbet@idiap.ch">Philip Abbet</maintainer>
  <author email="philip.abbet@idiap.ch">Philip Abbet</author>

  <license>MPL 2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
