#
# SPDX-FileCopyrightText: Copyright © 2024 Idiap Research Institute <contact@idiap.ch>
#
# SPDX-FileContributor: Philip Abbet <philip.abbet@idiap.ch>
#
# SPDX-License-Identifier: MPL-2.0
#

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "pygafro-assets"
version = "1.0.0"
description="Optional asset files for pygafro"
readme = "README.md"
authors = [
  { name = "Philip Abbet", email = "philip.abbet@idiap.ch" },
  { name = "Tobias Loew", email = "tobias.loew@idiap.ch" },
]
requires-python = ">=3.8"
license = "MPL-2.0"
license-files = [
    "LICENSE",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
pygafro = "source"
